--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <header class="header">
         <div class="header__menu">
             <ul class="header__list">
+                <li class="header__logo">
+                    <a href="/">
+                        <picture>
+                            <source srcset="/assets/img/logo.webp" type="image/webp">
+                            <img src="/assets/img/logo.webp" alt="Logo">
+                        </picture>
+                    </a>
+                </li>
                 <li class="header__item">
                     <a href="/football">Футбол</a>
                 </li>
